# legallm

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
api/processing/: Makefile
api/review/: lambda_function.py  pyproject.toml
api/upload/: Makefile  lambda_function.py  pyproject.toml
infra/: apigateway.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf  route53.tf  s3.tf  variables.tf
model/: Dockerfile  Makefile  inference.py  pyproject.toml
model/training/: cnn.py  data_prep.py  text_dataset.py  train.py
notebooks/: CNN Test.ipynb  LLM test (ChatGPT).ipynb  Makefile  get all sentence delimiters.ipynb  pySBD baseline.ipynb  pyproject.toml
scripts/: install_data.sh
